CSS Page d'accueil 90% Terminé

--- a/pages/page2.html
+++ b/pages/page2.html
@@ -21,6 +21,7 @@
 
         <header>
             <div>
+                <button><i class="fas fa-arrow-left"></i></button>
                 <a href="pages/page2.html"><img src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                         alt="La palette du goût" class="img_restaurant" /></a>
             </div>
