--- a/pages/page4.html
+++ b/pages/page4.html
@@ -21,6 +21,7 @@
 
         <header>
             <div>
+                <button><i class="fas fa-arrow-left"></i></button>
                 <a href="pages/page4.html"><img src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                         alt="A la française" class="img_restaurant" /></a>
             </div>
