--- a/pages/page5.html
+++ b/pages/page5.html
@@ -21,6 +21,7 @@
 
         <header>
             <div>
+                <button><i class="fas fa-arrow-left"></i></button>
                 <a href="pages/page5.html"><img
                         src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                         alt="Le délice des sens" class="img_restaurant" /></a>
