--- a/index.html
+++ b/index.html
@@ -20,100 +20,123 @@
         <!-- Header -->
 
         <header>
-            <div class="ohmyfood"><img src="public/img/logo/ohmyfood.png" alt="Logo OhMyFood" /></div>
+            <div class="main_logo"><img src="public/img/logo/ohmyfood.png" alt="Logo OhMyFood" /></div>
         </header>
 
         <!-- Section 1 - Explorer -->
 
-        <section>
-            <div id="localisation">
-                <i class="fas fa-map-marker-alt fa-sm"></i>
-                <p>Paris, Belleville</p>
+        <section id="localisation_section">
+            <div class="search_form">
+                <form method="post" action="traitement.php">
+                    <div class="localisation">
+                        <i class="fas fa-map-marker-alt fa-sm"></i>
+                    </div>
+                    <label for="area_search"></label>
+                    <input type="search" id="area_search" name="area_search" placeholder="Paris, Belleville" />
+                </form>
             </div>
-            <div>
+            <div class="main_description">
                 <div>
                     <h2>Réserver le menu qui vous convient</h2>
                     <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                 </div>
-                <button id="explorer">Explorer nos restaurants</button>
+                <button class="main_btn" type="button">Explorer nos restaurants</button>
             </div>
         </section>
 
         <!-- Section 2 - Fonctionnement -->
 
-        <section>
+        <section id="function_section">
             <h2>Fonctionnement</h2>
-            <div>
-                <div>
-                    <span class="number">1</span><i class="fas fa-mobile-alt"></i>
-                    <p>Choisissez un restaurant</p>
+            <div class="function">
+                <div class="step_1">
+                    <a href="#"><span>1</span><i class="fas fa-mobile-alt phone_logo"></i>
+                        <p>Choisissez un restaurant</p>
+                    </a>
                 </div>
-                <div>
-                    <span class="number">2</span><i class="fas fa-ellipsis-v"></i><i class="fas fa-bars"></i>
-                    <p>Composez votre menu</p>
+                <div class="step_2">
+                    <a href="#"><span>2</span><i class="fas fa-list-ul list_logo"></i> </i>
+                        <p>Composez votre menu</p>
+                    </a>
                 </div>
-                <div>
-                    <span class="number">3</span><i class="fas fa-store"></i>
-                    <p>Dégustez au restaurant</p>
+                <div class="step_3">
+                    <a href="#"><span>3</span><i class="fas fa-store store_logo"></i>
+                        <p>Dégustez au restaurant</p>
+                    </a>
                 </div>
             </div>
         </section>
 
         <!-- Section 3 - Restaurants -->
 
-        <section>
+        <section id="restaurants_section">
             <h2>Restaurants</h2>
-            <div>
+            <div class="restaurants_chart">
                 <a href="pages/page2.html"><img src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                         alt="La palette du goût" class="img_restaurant" />
-                    <span>Nouveau</span>
-                    <h3>La palette du goût</h3>
-                    <p>Ménilmontant</p>
-                    <div class="logo_heart"><i class="far fa-heart"></i></div>
+                    <div class="chart_description">
+                        <div class="description_text">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </div>
+                        <i class="far fa-heart logo_heart"></i>
+                    </div>
                 </a>
             </div>
-            <div>
+            <div class="restaurants_chart">
                 <a href="pages/page3.html"><img src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                         alt="La note enchantée" class="img_restaurant" />
-                    <span>Nouveau</span>
-                    <h3>La note enchantée</h3>
-                    <p>Charonne</p>
-                    <div class="logo_heart"><i class="far fa-heart"></i></div>
+                    <div class="chart_description">
+                        <div class="description_text">
+                            <h3>La note enchantée</h3>
+                            <p>Charonne</p>
+                        </div>
+                        <i class="far fa-heart logo_heart"></i>
+                    </div>
                 </a>
             </div>
-            <div>
+            <div class="restaurants_chart">
                 <a href="pages/page4.html"><img src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                         alt="A la française" class="img_restaurant" />
-                    <h3>A la française</h3>
-                    <p>Cité Rouge</p>
-                    <div class="logo_heart"><i class="far fa-heart"></i></div>
+                    <div class="chart_description">
+                        <div class="description_text">
+                            <h3>A la française</h3>
+                            <p>Cité Rouge</p>
+                        </div>
+                        <i class="far fa-heart logo_heart"></i>
+                    </div>
                 </a>
             </div>
-            <div>
+            <div class="restaurants_chart">
                 <a href="pages/page5.html"><img
                         src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                         alt="Le délice des sens" class="img_restaurant" />
-                    <h3>Le délice des sens</h3>
-                    <p>Folie-Méricourt</p>
-                    <div class="logo_heart"><i class="far fa-heart"></i></div>
+                    <div class="chart_description">
+                        <div class="description_text">
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                        </div>
+                        <i class="far fa-heart logo_heart"></i>
+
+                    </div>
                 </a>
             </div>
         </section>
 
         <!-- Footer -->
         <footer>
-            <div>
-                <img src="public/img/logo/ohmyfood.png" alt="Logo OhMyFood" class="ohmyfood" />
-                <div>
-                    <i class="fas fa-utensils"></i>
+            <div class="block_footer">
+                <img src="public/img/logo/ohmyfood.png" alt="Logo OhMyFood" class="main_logo" />
+                <div class="add_restaurant">
+                    <i class="fas fa-utensils ustensils"></i>
                     <p>Proposer un restaurant</p>
                 </div>
-                <div>
-                    <i class="fas fa-hands-helping"></i>
+                <div class="partnership">
+                    <i class="fas fa-hands-helping handshake"></i>
                     <p>Devenir partenaire</p>
                 </div>
                 <p>Mentions légales</p>
-                <p>Contact</p>
+                <div class="contact"><a href="mailto:votrenom@bidule.com">Contact</a></div>
             </div>
         </footer>
     </div>
