--- a/pages/page3.html
+++ b/pages/page3.html
@@ -21,6 +21,7 @@
 
         <header>
             <div>
+                <button><i class="fas fa-arrow-left"></i></button>
                 <a href="pages/page3.html"><img src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                         alt="La note enchantée" class="img_restaurant" /></a>
             </div>
