--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
         <section id="restaurants_section">
             <h2>Restaurants</h2>
             <div class="restaurants_chart">
-                <a href="pages/page2.html"><img src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                        alt="La palette du goût" class="img_restaurant" />
+                <a href="pages/la_palette_du_goût.html"><img
+                        src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"
+                        class="img_restaurant" />
                     <div class="chart_description">
                         <div class="description_text">
                             <h3>La palette du goût</h3>
@@ -84,7 +85,7 @@
                 </a>
             </div>
             <div class="restaurants_chart">
-                <a href="pages/page3.html"><img src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                <a href="pages/la_note_enchantée.html"><img src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                         alt="La note enchantée" class="img_restaurant" />
                     <div class="chart_description">
                         <div class="description_text">
@@ -96,8 +97,9 @@
                 </a>
             </div>
             <div class="restaurants_chart">
-                <a href="pages/page4.html"><img src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                        alt="A la française" class="img_restaurant" />
+                <a href="pages/a_la_française.html"><img
+                        src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"
+                        class="img_restaurant" />
                     <div class="chart_description">
                         <div class="description_text">
                             <h3>A la française</h3>
@@ -108,7 +110,7 @@
                 </a>
             </div>
             <div class="restaurants_chart">
-                <a href="pages/page5.html"><img
+                <a href="pages/le_delice_des_sens.html"><img
                         src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                         alt="Le délice des sens" class="img_restaurant" />
                     <div class="chart_description">
