Correction du CSS + Responsive tablette

--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -21,83 +21,83 @@
 
         <header>
             <div class="menus_header">
-                <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
-                <div class="main_logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood" />
+                <div class="back__arrow">
+                    <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
+                </div>
+                <div class="main_logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood"
+                        class="img_logo" />
                 </div>
             </div>
         </header>
 
-        <!-- Section 1 - Image restau -->
-
-        <section class="img_intro_section">
-            <div class="img_intro"><img
-                    src="../public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                    alt="Le délice des sens" class="img_restaurant" /></div>
-        </section>
-
-        <!-- Section 2 - Menus -->
+        <!-- Section - Menus -->
 
         <section class="menus_section">
-            <div class="menus_title">
-                <h1>Le délice des sens</h1>
-                <i class="far fa-heart logo_heart"></i>
+            <div class="main_img"><img
+                    src="../public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                    alt="Le délice des sens" class="img_restaurant" /></div>
+            <div class="menus_command">
+                <div class="menus_title">
+                    <h1>Le délice des sens</h1>
+                    <i class="far fa-heart logo_heart"></i>
+                </div>
+                <div class="main_menu">
+                    <div class="entrees">
+                        <h2>ENTREES</h2>
+                        <div class="meal_choice">
+                            <h3>Tartare de thon</h3>
+                            <p>Assaisonné au yuzu<span>25€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Bouchée de homard croustillant </h3>
+                            <p>Et sa farandole de petits légumes<span>35€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Velouté de cèpes </h3>
+                            <p>Aux truffes<span>20€</span></p>
+                        </div>
+                    </div>
+                    <div class="main_dish">
+                        <h2>PLATS</h2>
+                        <div class="meal_choice">
+                            <h3>Poulet rôti aux herbes de Provence </h3>
+                            <p>Et sa crème de truffe<span>40€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Langouste rôtie </h3>
+                            <p>Et ses légumes de saison<span>35€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Côte de boeuf Angus</h3>
+                            <p>Et sa purée de panais<span>44€</span></p>
+                        </div>
+                    </div>
+                    <div class="desserts">
+                        <h2>DESSERTS</h2>
+                        <div class="meal_choice">
+                            <h3>Farandole de desserts</h3>
+                            <p>Du chef<span>18€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Crème brulée</h3>
+                            <p>Revisitée<span>22€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Tiramisu</h3>
+                            <p>À la noisette<span>23€</span></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="command_btn">
+                    <button class="main_btn main_btn--modifier" type="button">Commander</button>
+                </div>
             </div>
-            <div class="entrees">
-                <h2>ENTREES</h2>
-                <div class="meal_choice">
-                    <h3>Tartare de thon</h3>
-                    <p>Assaisonné au yuzu<span>25€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Bouchée de homard croustillant </h3>
-                    <p>Et sa farandole de petits légumes<span>35€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Velouté de cèpes </h3>
-                    <p>Aux truffes<span>20€</span></p>
-                </div>
-            </div>
-            <div class="main_dish">
-                <h2>PLATS</h2>
-                <div class="meal_choice">
-                    <h3>Poulet rôti aux herbes de Provence </h3>
-                    <p>Et sa crème de truffe<span>40€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Langouste rôtie </h3>
-                    <p>Et ses légumes de saison<span>35€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Côte de boeuf Angus</h3>
-                    <p>Et sa purée de panais<span>44€</span></p>
-                </div>
-            </div>
-            <div class="desserts">
-                <h2>DESSERTS</h2>
-                <div class="meal_choice">
-                    <h3>Farandole de desserts</h3>
-                    <p>Du chef<span>18€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Crème brulée</h3>
-                    <p>Revisitée<span>22€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Tiramisu</h3>
-                    <p>À la noisette<span>23€</span></p>
-                </div>
-            </div>
-
-            <div class="command_btn">
-                <button class="main_btn main_btn--modifier" type="button">Commander</button>
-            </div>
-
         </section>
 
         <!-- Footer -->
         <footer>
             <div class="block_footer">
-                <img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood" class="main_logo" />
+                <h3>ohmyfood</h3>
                 <div class="add_restaurant">
                     <i class="fas fa-utensils ustensils"></i>
                     <p>Proposer un restaurant</p>
