--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <section id="restaurants_section">
             <h2>Restaurants</h2>
             <div class="restaurants_chart">
+                <div class="btn__card"><span class="new">Nouveau</span></div>
                 <a href="pages/la_palette_du_goût.html"><img
                         src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"
                         class="img_restaurant" />
@@ -85,6 +86,7 @@
                 </a>
             </div>
             <div class="restaurants_chart">
+                <div class="btn__card"><span class="new">Nouveau</span></div>
                 <a href="pages/la_note_enchantée.html"><img src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                         alt="La note enchantée" class="img_restaurant" />
                     <div class="chart_description">
@@ -128,7 +130,7 @@
         <!-- Footer -->
         <footer>
             <div class="block_footer">
-                <img src="public/img/logo/ohmyfood.png" alt="Logo OhMyFood" class="main_logo" />
+                <h3>ohmyfood</h3>
                 <div class="add_restaurant">
                     <i class="fas fa-utensils ustensils"></i>
                     <p>Proposer un restaurant</p>
