--- a/pages/a_la_française.html
+++ b/pages/a_la_française.html
@@ -21,82 +21,83 @@
 
         <header>
             <div class="menus_header">
-                <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
-                <div class="main_logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood" />
+                <div class="back__arrow">
+                    <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
+                </div>
+                <div class="main_logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood"
+                        class="img_logo" />
                 </div>
             </div>
         </header>
 
-        <!-- Section 1 - Image restau -->
-
-        <section class="img_intro_section">
-            <div class="img_intro"><img src="../public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                    alt="A la française" class="img_restaurant" /></div>
-        </section>
-
-        <!-- Section 2 - Menus -->
+        <!-- Section - Menus -->
 
         <section class="menus_section">
-            <div class="menus_title">
-                <h1>A la française</h1>
-                <i class="far fa-heart logo_heart"></i>
-            </div>
-            <div class="entrees">
-                <h2>ENTREES</h2>
-                <div class="meal_choice">
-                    <h3>Tartare de poulpe acidulé</h3>
-                    <p>Aux zestes d'orange<span>25€</span></p>
+            <div class="main_img"><img src="../public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                    alt="A la française" class="img_restaurant" /></div>
+            <div class="menus_command">
+                <div class="menus_title">
+                    <h1>A la française</h1>
+                    <i class="far fa-heart logo_heart"></i>
                 </div>
-                <div class="meal_choice">
-                    <h3>Velouté de légumes d'antan</h3>
-                    <p>Carotte, panais, topinambour<span>35€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Soupe à l'oignon</h3>
-                    <p>Revisitée<span>20€</span></p>
-                </div>
-            </div>
-            <div class="main_dish">
-                <h2>PLATS</h2>
-                <div class="meal_choice">
-                    <h3>Coquilles Saint-Jacques</h3>
-                    <p>Accompagnées d'une purée de panais <span>40€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Magret de canard</h3>
-                    <p>Et parmentier de pommes de terre <span>35€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                    <p>Sur son lit de gnocchis aux légumes <span>44€</span></p>
-                </div>
-            </div>
-            <div class="desserts">
-                <h2>DESSERTS</h2>
-                <div class="meal_choice">
-                    <h3>Pétales de violettes glacés</h3>
-                    <p>Et purée de noisettes <span>18€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Fondant au chocolat</h3>
-                    <p>Revisité <span>22€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Millefeuille croustillant</h3>
-                    <p>Myrtilles et pâte d’amande<span>23€</span></p>
-                </div>
-            </div>
+                <div class="main_menu">
 
-            <div class="command_btn">
-                <button class="main_btn main_btn--modifier" type="button">Commander</button>
+                    <div class="entrees">
+                        <h2>ENTREES</h2>
+                        <div class="meal_choice">
+                            <h3>Tartare de poulpe acidulé</h3>
+                            <p>Aux zestes d'orange<span>25€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Velouté de légumes d'antan</h3>
+                            <p>Carotte, panais, topinambour<span>35€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Soupe à l'oignon</h3>
+                            <p>Revisitée<span>20€</span></p>
+                        </div>
+                    </div>
+                    <div class="main_dish">
+                        <h2>PLATS</h2>
+                        <div class="meal_choice">
+                            <h3>Coquilles Saint-Jacques</h3>
+                            <p>Accompagnées d'une purée de panais <span>40€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Magret de canard</h3>
+                            <p>Et parmentier de pommes de terre <span>35€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                            <p>Sur son lit de gnocchis aux légumes <span>44€</span></p>
+                        </div>
+                    </div>
+                    <div class="desserts">
+                        <h2>DESSERTS</h2>
+                        <div class="meal_choice">
+                            <h3>Pétales de violettes glacés</h3>
+                            <p>Et purée de noisettes <span>18€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Fondant au chocolat</h3>
+                            <p>Revisité <span>22€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Millefeuille croustillant</h3>
+                            <p>Myrtilles et pâte d’amande<span>23€</span></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="command_btn">
+                    <button class="main_btn main_btn--modifier" type="button">Commander</button>
+                </div>
             </div>
-
         </section>
 
         <!-- Footer -->
         <footer>
             <div class="block_footer">
-                <img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood" class="main_logo" />
+                <h3>ohmyfood</h3>
                 <div class="add_restaurant">
                     <i class="fas fa-utensils ustensils"></i>
                     <p>Proposer un restaurant</p>
