--- a/pages/la_note_enchantée.html
+++ b/pages/la_note_enchantée.html
@@ -21,86 +21,86 @@
 
         <header>
             <div class="menus_header">
-                <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
-                <div class="main_logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood" />
+                <div class="back__arrow">
+                    <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
+                </div>
+                <div class="main_logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood"
+                        class="img_logo" />
                 </div>
             </div>
         </header>
 
-        <!-- Section 1 - Image restau -->
-
-        <section class="img_intro_section">
-            <div class="img_intro"><img src="../public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                    alt="La note enchantée" class="img_restaurant" /></div>
-        </section>
-
-        <!-- Section 2 - Menus -->
+        <!-- Section - Menus -->
 
         <section class="menus_section">
-            <div class="menus_title">
-                <h1>La note enchantée</h1>
-                <i class="far fa-heart logo_heart"></i>
+            <div class="main_img"><img src="../public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                    alt="La note enchantée" class="img_restaurant" /></div>
+            <div class="menus_command">
+                <div class="menus_title">
+                    <h1>La note enchantée</h1>
+                    <i class="far fa-heart logo_heart"></i>
+                </div>
+                <div class="main_menu">
+                    <div class="entrees">
+                        <h2>ENTREES</h2>
+                        <div class="meal_choice">
+                            <h3>Ravioles de foie gras</h3>
+                            <p>Accompagnés de leur crème à la truffe<span>25€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Caviar osciètre</h3>
+                            <p>Sur blini à la farine de blé noir<span>35€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Homard et espuma de potiron</h3>
+                            <p>Mariné aux zestes d'orange<span>20€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Foie gras de canard cuit entier</h3>
+                            <p>Confiture de figue et pain toasté<span>35€</span></p>
+                        </div>
+                    </div>
+                    <div class="main_dish">
+                        <h2>PLATS</h2>
+                        <div class="meal_choice">
+                            <h3>Noix de coquilles Saint-Jacques</h3>
+                            <p>Sur lit de purée de céleri-rave<span>40€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Langoustine poêlée</h3>
+                            <p>Purée de patate douce<span>35€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Mijoté de queue de boeuf </h3>
+                            <p>Et riz sauvage aux zestes de citron<span>44€</span></p>
+                        </div>
+                    </div>
+                    <div class="desserts">
+                        <h2>DESSERTS</h2>
+                        <div class="meal_choice">
+                            <h3>Macaron noisette et chocolat</h3>
+                            <p>Glace au caramel brun et sel de Guérande<span>18€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Tarte au citron meringuée</h3>
+                            <p>Avec son coulis de citron<span>22€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Millefeuille croustillant</h3>
+                            <p>Déstructurée<span>23€</span></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="command_btn">
+                    <button class="main_btn main_btn--modifier" type="button">Commander</button>
+                </div>
             </div>
-            <div class="entrees">
-                <h2>ENTREES</h2>
-                <div class="meal_choice">
-                    <h3>Ravioles de foie gras</h3>
-                    <p>Accompagnés de leur crème à la truffe<span>25€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Caviar osciètre</h3>
-                    <p>Sur blini à la farine de blé noir<span>35€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Homard et espuma de potiron</h3>
-                    <p>Mariné aux zestes d'orange<span>20€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Foie gras de canard cuit entier</h3>
-                    <p>Confiture de figue et pain toasté<span>35€</span></p>
-                </div>
-            </div>
-            <div class="main_dish">
-                <h2>PLATS</h2>
-                <div class="meal_choice">
-                    <h3>Noix de coquilles Saint-Jacques</h3>
-                    <p>Sur lit de purée de céleri-rave<span>40€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Langoustine poêlée</h3>
-                    <p>Purée de patate douce<span>35€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Mijoté de queue de boeuf </h3>
-                    <p>Et riz sauvage aux zestes de citron<span>44€</span></p>
-                </div>
-            </div>
-            <div class="desserts">
-                <h2>DESSERTS</h2>
-                <div class="meal_choice">
-                    <h3>Macaron noisette et chocolat</h3>
-                    <p>Glace au caramel brun et sel de Guérande<span>18€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Tarte au citron meringuée</h3>
-                    <p>Avec son coulis de citron<span>22€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Millefeuille croustillant</h3>
-                    <p>Déstructurée<span>23€</span></p>
-                </div>
-            </div>
-
-            <div class="command_btn">
-                <button class="main_btn main_btn--modifier" type="button">Commander</button>
-            </div>
-
         </section>
 
         <!-- Footer -->
         <footer>
             <div class="block_footer">
-                <img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood" class="main_logo" />
+                <h3>ohmyfood</h3>
                 <div class="add_restaurant">
                     <i class="fas fa-utensils ustensils"></i>
                     <p>Proposer un restaurant</p>
