--- a/pages/la_palette_du_goût.html
+++ b/pages/la_palette_du_goût.html
@@ -21,83 +21,83 @@
 
         <header>
             <div class="menus_header">
-                <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
-                <div class="main_logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood" />
+                <div class="back__arrow">
+                    <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
+                </div>
+                <div class="main_logo"><img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood"
+                        class="img_logo" />
                 </div>
             </div>
         </header>
 
-        <!-- Section 1 - Image restau -->
-
-        <section class="img_intro_section">
-            <div class="img_intro"><img src="../public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                    alt="La palette du goût" class="img_restaurant" /></div>
-        </section>
-
-        <!-- Section 2 - Menus -->
+        <!-- Section - Menus -->
 
         <section class="menus_section">
-            <div class="menus_title">
-                <h1>La palette du goût</h1>
-                <i class="far fa-heart logo_heart"></i>
+            <div class="main_img"><img src="../public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                    alt="La palette du goût" class="img_restaurant" /></div>
+            <div class="menus_command">
+                <div class="menus_title">
+                    <h1>La palette du goût</h1>
+                    <i class="far fa-heart logo_heart"></i>
+                </div>
+                <div class="main_menu">
+                    <div class="entrees">
+                        <h2>ENTREES</h2>
+                        <div class="meal_choice">
+                            <h3>Fricassée d'escargot </h3>
+                            <p>Au piment d'Espelette<span>25€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Foie gras de canard mi-cuit</h3>
+                            <p>Et ses copeaux de truffe noire<span>35€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Oeuf au plat</h3>
+                            <p>Assaisonné à la truffe sur lit de caviar<span>20€</span></p>
+                        </div>
+                    </div>
+                    <div class="main_dish">
+                        <h2>PLATS</h2>
+                        <div class="meal_choice">
+                            <h3>Filet de boeuf aux herbes</h3>
+                            <p>Accompagné de sa ribambelle de légumes<span>40€</span>
+                            </p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Parmentier de queue de boeuf</h3>
+                            <p>À la truffe noire sur sa purée de panais<span>35€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Filet de turbot</h3>
+                            <p>Aux agrumes<span>44€</span></p>
+                        </div>
+                    </div>
+                    <div class="desserts">
+                        <h2>DESSERTS</h2>
+                        <div class="meal_choice">
+                            <h3>Paris-Brest</h3>
+                            <p>Revisité<span>18€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Macaron au chocolat d'exception </h3>
+                            <p>Et glace à la vanille de Madagascar<span>22€</span></p>
+                        </div>
+                        <div class="meal_choice">
+                            <h3>Mousse au chocolat </h3>
+                            <p>Au piment d'Espelette et à la truffe noire<span>23€</span></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="command_btn">
+                    <button class="main_btn main_btn--modifier" type="button">Commander</button>
+                </div>
             </div>
-            <div class="entrees">
-                <h2>ENTREES</h2>
-                <div class="meal_choice">
-                    <h3>Fricassée d'escargot </h3>
-                    <p>Au piment d'Espelette<span>25€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Foie gras de canard mi-cuit</h3>
-                    <p>Et ses copeaux de truffe noire<span>35€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Oeuf au plat</h3>
-                    <p>Assaisonné à la truffe sur lit de caviar<span>20€</span></p>
-                </div>
-            </div>
-            <div class="main_dish">
-                <h2>PLATS</h2>
-                <div class="meal_choice">
-                    <h3>Filet de boeuf aux herbes</h3>
-                    <p>Accompagné de sa ribambelle de légumes<span>40€</span>
-                    </p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Parmentier de queue de boeuf</h3>
-                    <p>À la truffe noire sur sa purée de panais<span>35€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Filet de turbot</h3>
-                    <p>Aux agrumes<span>44€</span></p>
-                </div>
-            </div>
-            <div class="desserts">
-                <h2>DESSERTS</h2>
-                <div class="meal_choice">
-                    <h3>Paris-Brest</h3>
-                    <p>Revisité<span>18€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Macaron au chocolat d'exception </h3>
-                    <p>Et glace à la vanille de Madagascar<span>22€</span></p>
-                </div>
-                <div class="meal_choice">
-                    <h3>Mousse au chocolat </h3>
-                    <p>Au piment d'Espelette et à la truffe noire<span>23€</span></p>
-                </div>
-            </div>
-
-            <div class="command_btn">
-                <button class="main_btn main_btn--modifier" type="button">Commander</button>
-            </div>
-
         </section>
 
         <!-- Footer -->
         <footer>
             <div class="block_footer">
-                <img src="../public/img/logo/ohmyfood.png" alt="Logo OhMyFood" class="main_logo" />
+                <h3>ohmyfood</h3>
                 <div class="add_restaurant">
                     <i class="fas fa-utensils ustensils"></i>
                     <p>Proposer un restaurant</p>
