animation et responsive 90% terminé

--- a/index.html
+++ b/index.html
@@ -81,9 +81,14 @@
                             <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
                         </div>
-                        <i class="far fa-heart logo_heart"></i>
+
+                        <div class="fill__heart">
+                            <i class="far fa-heart logo_heart"></i>
+                        </div>
+
                     </div>
                 </a>
+
             </div>
             <div class="restaurants_chart">
                 <div class="btn__card"><span class="new">Nouveau</span></div>
@@ -94,7 +99,11 @@
                             <h3>La note enchantée</h3>
                             <p>Charonne</p>
                         </div>
-                        <i class="far fa-heart logo_heart"></i>
+
+                        <div class="fill__heart">
+                            <i class="far fa-heart logo_heart"></i>
+                        </div>
+
                     </div>
                 </a>
             </div>
@@ -107,7 +116,11 @@
                             <h3>A la française</h3>
                             <p>Cité Rouge</p>
                         </div>
-                        <i class="far fa-heart logo_heart"></i>
+
+                        <div class="fill__heart">
+                            <i class="far fa-heart logo_heart"></i>
+                        </div>
+
                     </div>
                 </a>
             </div>
@@ -120,7 +133,11 @@
                             <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
                         </div>
-                        <i class="far fa-heart logo_heart"></i>
+
+                        <div class="fill__heart">
+                            <i class="far fa-heart logo_heart"></i>
+                        </div>
+
 
                     </div>
                 </a>
