--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -39,52 +39,108 @@
             <div class="menus_command">
                 <div class="menus_title">
                     <h1>Le délice des sens</h1>
-                    <i class="far fa-heart logo_heart"></i>
+                    <div class="fill__heart">
+                        <i class="far fa-heart logo_heart"></i>
+                    </div>
                 </div>
                 <div class="main_menu">
                     <div class="entrees">
                         <h2>ENTREES</h2>
-                        <div class="meal_choice">
-                            <h3>Tartare de thon</h3>
-                            <p>Assaisonné au yuzu<span>25€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Bouchée de homard croustillant </h3>
-                            <p>Et sa farandole de petits légumes<span>35€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Velouté de cèpes </h3>
-                            <p>Aux truffes<span>20€</span></p>
+                        <div class="choices">
+                            <div class="meal_choice_1">
+                                <div class="description">
+                                    <h3>Tartare de thon</h3>
+                                    <p>Assaisonné au yuzu<span>25€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_2">
+                                <div class="description">
+                                    <h3>Bouchée de homard croustillant </h3>
+                                    <p>Et sa farandole de petits légumes<span>35€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_3">
+                                <div class="description">
+                                    <div class="description">
+                                        <h3>Velouté de cèpes </h3>
+                                        <p>Aux truffes<span>20€</span></p>
+                                    </div>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="main_dish">
                         <h2>PLATS</h2>
-                        <div class="meal_choice">
-                            <h3>Poulet rôti aux herbes de Provence </h3>
-                            <p>Et sa crème de truffe<span>40€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Langouste rôtie </h3>
-                            <p>Et ses légumes de saison<span>35€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Côte de boeuf Angus</h3>
-                            <p>Et sa purée de panais<span>44€</span></p>
+                        <div class="choices">
+                            <div class="meal_choice_1">
+                                <div class="description">
+                                    <h3>Poulet rôti aux herbes de Provence </h3>
+                                    <p>Et sa crème de truffe<span>40€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_2">
+                                <div class="description">
+                                    <h3>Langouste rôtie </h3>
+                                    <p>Et ses légumes de saison<span>35€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_3">
+                                <div class="description">
+                                    <h3>Côte de boeuf Angus</h3>
+                                    <p>Et sa purée de panais<span>44€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="desserts">
                         <h2>DESSERTS</h2>
-                        <div class="meal_choice">
-                            <h3>Farandole de desserts</h3>
-                            <p>Du chef<span>18€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Crème brulée</h3>
-                            <p>Revisitée<span>22€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Tiramisu</h3>
-                            <p>À la noisette<span>23€</span></p>
+                        <div class="choices">
+                            <div class="meal_choice_1">
+                                <div class="description">
+                                    <h3>Farandole de desserts</h3>
+                                    <p>Du chef<span>18€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_2">
+                                <div class="description">
+                                    <h3>Crème brulée</h3>
+                                    <p>Revisitée<span>22€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+
+                            </div>
+                            <div class="meal_choice_3">
+                                <div class="description">
+                                    <h3>Tiramisu</h3>
+                                    <p>À la noisette<span>23€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
