--- a/pages/a_la_française.html
+++ b/pages/a_la_française.html
@@ -38,53 +38,108 @@
             <div class="menus_command">
                 <div class="menus_title">
                     <h1>A la française</h1>
-                    <i class="far fa-heart logo_heart"></i>
+                    <div class="fill__heart">
+                        <i class="far fa-heart logo_heart"></i>
+                    </div>
                 </div>
                 <div class="main_menu">
-
                     <div class="entrees">
                         <h2>ENTREES</h2>
-                        <div class="meal_choice">
-                            <h3>Tartare de poulpe acidulé</h3>
-                            <p>Aux zestes d'orange<span>25€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Velouté de légumes d'antan</h3>
-                            <p>Carotte, panais, topinambour<span>35€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Soupe à l'oignon</h3>
-                            <p>Revisitée<span>20€</span></p>
+                        <div class="choices">
+                            <div class="meal_choice_1">
+                                <div class="description">
+                                    <h3>Tartare de poulpe acidulé</h3>
+                                    <p>Aux zestes d'orange<span>25€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_2">
+                                <div class="description">
+                                    <h3>Velouté de légumes d'antan</h3>
+                                    <p>Carotte, panais, topinambour<span>35€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_3">
+                                <div class="description">
+                                    <div class="description">
+                                        <h3>Soupe à l'oignon</h3>
+                                        <p>Revisitée<span>20€</span></p>
+                                    </div>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="main_dish">
                         <h2>PLATS</h2>
-                        <div class="meal_choice">
-                            <h3>Coquilles Saint-Jacques</h3>
-                            <p>Accompagnées d'une purée de panais <span>40€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Magret de canard</h3>
-                            <p>Et parmentier de pommes de terre <span>35€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                            <p>Sur son lit de gnocchis aux légumes <span>44€</span></p>
+                        <div class="choices">
+                            <div class="meal_choice_1">
+                                <div class="description">
+                                    <h3>Coquilles Saint-Jacques</h3>
+                                    <p>Accompagnées d'une purée de panais<span>40€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_2">
+                                <div class="description">
+                                    <h3>Magret de canard</h3>
+                                    <p>Et parmentier de pommes de terre<span>35€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_3">
+                                <div class="description">
+                                    <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                                    <p>Sur son lit de gnocchis aux légumes<span>44€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="desserts">
                         <h2>DESSERTS</h2>
-                        <div class="meal_choice">
-                            <h3>Pétales de violettes glacés</h3>
-                            <p>Et purée de noisettes <span>18€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Fondant au chocolat</h3>
-                            <p>Revisité <span>22€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Millefeuille croustillant</h3>
-                            <p>Myrtilles et pâte d’amande<span>23€</span></p>
+                        <div class="choices">
+                            <div class="meal_choice_1">
+                                <div class="description">
+                                    <h3>Pétales de violettes glacés</h3>
+                                    <p>Et purée de noisettes<span>18€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_2">
+                                <div class="description">
+                                    <h3>Fondant au chocolat</h3>
+                                    <p>Revisité<span>22€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+
+                            </div>
+                            <div class="meal_choice_3">
+                                <div class="description">
+                                    <h3>Millefeuille croustillant</h3>
+                                    <p>Myrtilles et pâte d’amande<span>23€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
