--- a/pages/la_note_enchantée.html
+++ b/pages/la_note_enchantée.html
@@ -38,56 +38,119 @@
             <div class="menus_command">
                 <div class="menus_title">
                     <h1>La note enchantée</h1>
-                    <i class="far fa-heart logo_heart"></i>
+                    <div class="fill__heart">
+                        <i class="far fa-heart logo_heart"></i>
+                    </div>
                 </div>
                 <div class="main_menu">
                     <div class="entrees">
                         <h2>ENTREES</h2>
-                        <div class="meal_choice">
-                            <h3>Ravioles de foie gras</h3>
-                            <p>Accompagnés de leur crème à la truffe<span>25€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Caviar osciètre</h3>
-                            <p>Sur blini à la farine de blé noir<span>35€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Homard et espuma de potiron</h3>
-                            <p>Mariné aux zestes d'orange<span>20€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Foie gras de canard cuit entier</h3>
-                            <p>Confiture de figue et pain toasté<span>35€</span></p>
+                        <div class="choices">
+                            <div class="meal_choice_1">
+                                <div class="description">
+                                    <h3>Ravioles de foie gras </h3>
+                                    <p>Accompagnés de leur crème à la truffe <span>25€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_2">
+                                <div class="description">
+                                    <h3>Caviar osciètre </h3>
+                                    <p>Sur blini à la farine de blé noir <span>35€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_3">
+                                <div class="description">
+                                    <div class="description">
+                                        <h3>Homard et espuma de potiron </h3>
+                                        <p>Mariné aux zestes d'orange <span>20€</span></p>
+                                    </div>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_4">
+                                <div class="description">
+                                    <div class="description">
+                                        <h3>Foie gras de canard cuit entier </h3>
+                                        <p>Confiture de figue et pain toasté <span>35€</span></p>
+                                    </div>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="main_dish">
                         <h2>PLATS</h2>
-                        <div class="meal_choice">
-                            <h3>Noix de coquilles Saint-Jacques</h3>
-                            <p>Sur lit de purée de céleri-rave<span>40€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Langoustine poêlée</h3>
-                            <p>Purée de patate douce<span>35€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Mijoté de queue de boeuf </h3>
-                            <p>Et riz sauvage aux zestes de citron<span>44€</span></p>
+                        <div class="choices">
+                            <div class="meal_choice_1">
+                                <div class="description">
+                                    <h3>Noix de coquilles Saint-Jacques </h3>
+                                    <p>Sur lit de purée de céleri-rave <span>40€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_2">
+                                <div class="description">
+                                    <h3>Langoustine poêlée </h3>
+                                    <p>Purée de patate douce <span>35€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_3">
+                                <div class="description">
+                                    <h3>Mijoté de queue de boeuf </h3>
+                                    <p>Et riz sauvage aux zestes de citron <span>44€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="desserts">
                         <h2>DESSERTS</h2>
-                        <div class="meal_choice">
-                            <h3>Macaron noisette et chocolat</h3>
-                            <p>Glace au caramel brun et sel de Guérande<span>18€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Tarte au citron meringuée</h3>
-                            <p>Avec son coulis de citron<span>22€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Millefeuille croustillant</h3>
-                            <p>Déstructurée<span>23€</span></p>
+                        <div class="choices">
+                            <div class="meal_choice_1">
+                                <div class="description">
+                                    <h3>Farandole de desserts</h3>
+                                    <p>Glace au caramel brun et sel de Guérande <span>18€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_2">
+                                <div class="description">
+                                    <h3>Baba au rhum revisité</h3>
+                                    <p>Avec son coulis de citron<span>22€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+
+                            </div>
+                            <div class="meal_choice_3">
+                                <div class="description">
+                                    <h3>Tarte au citron meringuée</h3>
+                                    <p>Déstructurée<span>23€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
