--- a/pages/la_palette_du_goût.html
+++ b/pages/la_palette_du_goût.html
@@ -38,53 +38,112 @@
             <div class="menus_command">
                 <div class="menus_title">
                     <h1>La palette du goût</h1>
-                    <i class="far fa-heart logo_heart"></i>
+                    <div class="fill__heart">
+                        <i class="far fa-heart logo_heart"></i>
+                    </div>
                 </div>
                 <div class="main_menu">
                     <div class="entrees">
                         <h2>ENTREES</h2>
-                        <div class="meal_choice">
-                            <h3>Fricassée d'escargot </h3>
-                            <p>Au piment d'Espelette<span>25€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <p>Et ses copeaux de truffe noire<span>35€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Oeuf au plat</h3>
-                            <p>Assaisonné à la truffe sur lit de caviar<span>20€</span></p>
+                        <div class="choices">
+                            <div class="meal_choice_1">
+                                <div class="description">
+                                    <h3>Fricassée d'escargot </h3>
+                                    <p>Au piment d'Espelette <span>25€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_2">
+                                <div class="description">
+                                    <h3>Foie gras de canard mi-cuit
+                                    </h3>
+                                    <p>Et ses copeaux de truffe noire <span>35€</span>
+                                    </p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_3">
+                                <div class="description">
+                                    <div class="description">
+                                        <h3>Oeuf au plat </h3>
+                                        <p>Assaisonné à la truffe sur lit de caviar <span>20€</span>
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="main_dish">
                         <h2>PLATS</h2>
-                        <div class="meal_choice">
-                            <h3>Filet de boeuf aux herbes</h3>
-                            <p>Accompagné de sa ribambelle de légumes<span>40€</span>
-                            </p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Parmentier de queue de boeuf</h3>
-                            <p>À la truffe noire sur sa purée de panais<span>35€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Filet de turbot</h3>
-                            <p>Aux agrumes<span>44€</span></p>
+                        <div class="choices">
+                            <div class="meal_choice_1">
+                                <div class="description">
+                                    <h3>Filet de boeuf aux herbes </h3>
+                                    <p>Accompagné de sa ribambelle de légumes <span>40€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_2">
+                                <div class="description">
+                                    <h3>Parmentier de queue de boeuf </h3>
+                                    <p>À la truffe noire sur sa purée de panais <span>35€</span>
+                                    </p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_3">
+                                <div class="description">
+                                    <h3>Filet de turbot </h3>
+                                    <p>Aux agrumes <span>44€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="desserts">
                         <h2>DESSERTS</h2>
-                        <div class="meal_choice">
-                            <h3>Paris-Brest</h3>
-                            <p>Revisité<span>18€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Macaron au chocolat d'exception </h3>
-                            <p>Et glace à la vanille de Madagascar<span>22€</span></p>
-                        </div>
-                        <div class="meal_choice">
-                            <h3>Mousse au chocolat </h3>
-                            <p>Au piment d'Espelette et à la truffe noire<span>23€</span></p>
+                        <div class="choices">
+                            <div class="meal_choice_1">
+                                <div class="description">
+                                    <h3>Paris-Brest </h3>
+                                    <p>Revisité<span>18€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
+                            <div class="meal_choice_2">
+                                <div class="description">
+                                    <h3>Macaron au chocolat d'exception </h3>
+                                    <p>Et glace à la vanille de Madagascar <span>22€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+
+                            </div>
+                            <div class="meal_choice_3">
+                                <div class="description">
+                                    <h3>Mousse au chocolat </h3>
+                                    <p>Au piment d'Espelette et à la truffe noire<span>23€</span></p>
+                                </div>
+                                <div class="selected">
+                                    <i class="check fas fa-check"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
